editor with autofill and fraction

--- a/editor/Examples/fraction_example.html
+++ b/editor/Examples/fraction_example.html
@@ -40,9 +40,9 @@
       <h3>Nested Example</h3>
       <div class="fraction">
         <div class="fraction">
-          <span class="numerator">5(x+y)</span>
-          <span class="bar">/</span>
-          <span class="denominator">7(x*y)</span>
+          <span class="fraction numerator">5(x+y)</span>
+          <span class="fraction bar">/</span>
+          <span class="fractiondenominator">7(x*y)</span>
         </div>
         <span class="bar">/</span>
         <span class="denominator">5x</span>
