refactoring in progress

--- a/editor/Examples/radical_example.html
+++ b/editor/Examples/radical_example.html
@@ -23,16 +23,7 @@
   </head>
 
   <body>
-    <h1 style="text-align: center;">Radicals</h1>
-    <div class="radicals">
-      <h3>Nth root</h3>
-      <span class="radical"> <span class="n-root">3</span>&radic;</span>
-      <span class="radicand">81</span>
-    </div>
-    <h3>Basic Example</h3>
-    <div class="radicals">
-      <i>y</i> = <span class="radical">&radic;</span>
-      <span class="radicand"><i>x</i><sup>2</sup> + 6</span>
-    </div>
+    <span class="radical">&radic;</span>
+    <span class="radicand"><i>x</i><sup>2</sup> + 6</span>
   </body>
 </html>
